Modifying adding image design

--- a/inscription.html
+++ b/inscription.html
@@ -61,7 +61,11 @@
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
                                 <input type="password" name="re_pass" id="re_pass" placeholder="Confirmation Mot de Passe" />
                             </div>
-                            <div><button class="img-upload">Votre Image</button></div>
+                            <div class="img-upload-div">
+                                    <div class="img-upload-title"><i class="zmdi zmdi-photo-size-select-large"></i><span style="color:gray">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Votre image</span></div>
+                                <input class="img-input" type="image" id="image" name="image" value="">
+                                <button class="img-upload">+</button>
+                            </div>
                         </form>
                     </div>
                     <div class="signup-image">
