Adding Ajax request helper and Making CORPS request to the server

--- a/inscription.html
+++ b/inscription.html
@@ -71,7 +71,7 @@
                             </div>
                             <div class="img-upload-div">
                                     <div class="img-upload-title"><i class="zmdi zmdi-photo-size-select-large"></i><span style="color:gray">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Votre image</span></div>
-                                <input class="img-input" type="image" id="image" name="image" value="">
+                                <input class="img-input" type="text" id="image" name="image" value="">
                                 <button class="img-upload">+</button>
                             </div>
                         </form>
@@ -80,7 +80,7 @@
                          <figure><img src="images/signup-image.jpg" alt="sing up image"></figure>
                         <a href="./index.html" class="signup-image-link">Se connecter</a>
                         <div class="form-group form-button" >
-                            <input type="submit" style="width:100%;" name="signup" id="signup" class="form-submit" value="S'inscrire" />
+                            <input type="submit" id="submit" style="width:100%;" name="signup" id="signup" class="form-submit" value="S'inscrire" />
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
 
     <!-- JS -->
     <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body><!--by neword -->
 
 </html>
