Adding input confirm password form validation constraint

--- a/inscription.html
+++ b/inscription.html
@@ -66,7 +66,7 @@
                             </div>
                             <span class='error' id="repassError"></span>
                             <div class="form-group">
-                                <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
+                                <label for="repass"><i class="zmdi zmdi-lock-outline"></i></label>
                                 <input type="password" id="repass" placeholder="Confirmation Mot de Passe" />
                             </div>
                             <div class="img-upload-div">
