--- a/dashboard.html
+++ b/dashboard.html
@@ -19,24 +19,36 @@
     <div class="col-2 sidebar" ></div>     
     <div class="col main" >
         <nav class="nav" style="width:100%">
-            <img class="profile-img" src="images/avatar.png" alt="avatar">
-            <select>
+            <div>
+                <img class="profile-img" src="images/avatar.png" alt="avatar">
+            </div>
+                <select>
                 <option>Neword Orquel</option>
                 <option>Deconnexion</option>
             </select>
         </nav>
         <div class="row content">
             <div class="col-2 text-center">
-                <img class="profile-img-1" src="images/avatar.png" alt="avatar">
-                <strong>Neword Orquel</strong>
-                <form style="display:none">
-                    <input type="radio" name="role" value="root">
-                    <input type="radio" name="role" value="administrator">
-                    <input type="radio" name="role" value="user">
-                </form>
+                <div class="profile-img-div" id="addButton">
+                    <i class="zmdi zmdi-edit upload" id="upload"></i>
+                    <img class="profile-img-1" id="img" src="images/avatar.png" alt="avatar">
+                </div>
+                    <strong>Neword Orquel</strong>
+                <div class="row mt-3 roles">
+                    <div class="col-6 text-left">
+                        <label for="root">Root</label>
+                        <label for="admin">Admin</label>
+                        <label for="user">User</label>
+                    </div>
+                    <div class="col-6 roles-radio">
+                        <div><input type="radio" id="root" name="role" value="root"></div>
+                        <div><input type="radio" id="admin" name="role" value="admin"></div>
+                        <div><input type="radio" checked="checked" id="user" name="role" value="user"></div>
+                    </div>
+                </div>
             </div>
             <div class="col-10">
-<form method="POST" enctype="multipart/form-data" class=" profil-form card">
+<form method="POST" enctype="multipart/form-data" id="register-form" action="http://192.168.8.102/user/update/1" class=" profil-form card">
     <div class="row">
         <div class="col-6">
             <span class='error' id="nameError"></span>
@@ -75,21 +87,24 @@
     <div class="row">
         <div class="col-6">
             <span class='error' id="passwordError"></span>
-            <input type="password" name="password" id="password" placeholder="Mot de Passe" />
+            <input type="password" autocomplete="" name="password" id="password" placeholder="Mot de Passe" />
         </div>
         <div class="col-6">
             <span class='error' id="repassError"></span>
-            <input type="password" id="repass" placeholder="Confirmation Mot de Passe" />
+            <input autocomplete="" type="password" id="repass" placeholder="Confirmation Mot de Passe" />
         </div>
     </div>
-   
+    <input type="file" name="file" id="file_image" style="display:none">
+    <input type="text" name="right" id="right" value="user" style="display:none">
 </form>
     <div class="save-button-div">
-        <button class="btn btn-success save-button"><i class="zmdi zmdi-check"></i></button>
+        <button class="btn btn-success save-button" id="submit"><i class="zmdi zmdi-check"></i></button>
     </div>
             </div>
         </div>
     </div>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="js/dashboard.js"></script>
 </body>
 
