--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
                     <div class="signin-form">
                         <h2 class="form-title">Se connecter</h2>
                         <form method="POST" class="register-form" id="login-form">
+                            <span class='error' id="emailError"></span>
                             <div class="form-group">
-                                <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="your_name" id="your_name" placeholder="Votre Email"/>
+                                <label for="email"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="email" id="email" placeholder="Votre Email"/>
                             </div>
+                            <span class='error' id="passwordError"></span>
                             <div class="form-group">
-                                <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Mot de Passe"/>
+                                <label for="password"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="password" id="password" placeholder="Mot de Passe"/>
                             </div>
                             <div class="form-group form-button">
-                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                                <button  id="submit-login" type="button" class="form-submit">Log in</button>
                             </div>
                         </form>
+                        <div style="text-align: right;"><a href="#">Mot de passe oublié?</a></div>
                     </div>
                 </div>
             </div>
@@ -48,6 +51,6 @@
 
     <!-- JS -->
     <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
