--- a/inscription.html
+++ b/inscription.html
@@ -72,7 +72,7 @@
                             <div class="img-upload-div">
                                 <input class="img-input" type="text" id="image"  placeholder="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Votre image">
                                 <button class="img-upload" type="button" id="addButton">+</button>
-                                <input type="file" name="image" id="file_image" style="display:none">
+                                <input type="file" name="file" id="file_image" style="display:none">
                             </div>
                         </form>
                     </div>
