--- a/dashboard.html
+++ b/dashboard.html
@@ -16,13 +16,20 @@
 </head>
 
 <body class="row">
-    <div class="col-2 sidebar" ></div>     
+    <div class="col-2 sidebar" >
+        <div class="logo-div"><img alt="logo" class="logo" src="images/logo.png"></div>
+        <div class="sidebar-items">
+            <a  href="/theses"><button id="thesesButton">Thèses</button></a>
+            <a href="/users"><button id="usersLink" >Utilisateurs</button></a>
+            <a href="/stats"><button id="statsLink" >Statistiques</button></a>
+        </div>
+    </div>     
     <div class="col main" >
         <nav class="nav" style="width:100%">
             <div>
                 <img class="profile-img" src="images/avatar.png" alt="avatar">
             </div>
-                <select>
+                <select class="log-out">
                 <option>Neword Orquel</option>
                 <option>Deconnexion</option>
             </select>
