--- a/showTheses.html
+++ b/showTheses.html
@@ -118,18 +118,21 @@
                             </div>
                             <div class="col-6">
                                 <div class="form-group row">
-                                    <div class="col-11">
-                                        <input type="text" name="bibliography" id="bibliography" placeholder="Bibliographie" />
-                                    </div>
-                                    <div class="col-1" style="padding:0;">
-                                        <button style="width:100%" data-toggle="modal" data-target="#addBibliography" class="img-upload" type="button" id="addBibliographyBtn">+</button>
+                                    <div class="col-12">
+                                        <h4>Bibliographie</h4>
+                                        <ul class="list-group" id="bibliographyList">
+                                        </ul>
+                                        <input type="text" style="display:none;" name="bibliography" id="bibliography" placeholder="Bibliographie" />
+                                        <button style="width:100%" style="display:none;" data-toggle="modal" data-target="#addBibliography" class="img-upload" type="button" id="addBibliographyBtn">+</button>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-11">
-                                        <input type="text" name="library" id="library" placeholder="Bibliothèque" />
-                                    </div>
-                                    <div class="col-1" style="padding:0;">
+                                <div class="form-group row">   
+                                        <input type="text" name="library" style="display:none" id="library" placeholder="Bibliothèque" />
+                                    
+                                    <div class="col-12">
+                                        <h4>Bibliothèque</h4>
+                                        <ul class="list-group" id="libraryList">
+                                        </ul>
                                         <button style="width:100%" data-toggle="modal" type="button" data-target="#addLibrary"  class="img-upload" id="addlibraryBtn">+</button>
                                     </div>
                                         
@@ -154,10 +157,14 @@
                         <input type="text" id="bibliographyTitle" placeholder="Titre" />
                     </div>
                     <div class="form-group">
-                        <input type="text" id="bibliographyContent" placeholder="Contenu" />
+                        <input type="text" id="bibliographyContent" placeholder="Description" />
                     </div>
                     <div class="text-right">
-                        <button type="button" class="btn btn-primary rounded-circle" style="width:3rem" data-toggle="modal" data-target="#addThese">
+                        <button type="button" class="btn btn-danger rounded-circle" style="width:3rem"
+                            data-dismiss="modal">
+                            <i class="zmdi zmdi-close"></i>
+                        </button>
+                        <button type="button" id="confirmBibliographyAdding" class="btn btn-primary rounded-circle" style="width:3rem">
                             <i class="zmdi zmdi-check"></i>
                             </i>
                         </button>
@@ -172,7 +179,10 @@
                         <input type="text" id="libraryContent" placeholder="Lien" />
                     </div>
                     <div class="text-right">
-                        <button type="button" class="btn btn-primary rounded-circle" style="width:3rem" data-toggle="modal" data-target="#addThese">
+                        <button type="button" class="btn btn-danger rounded-circle" style="width:3rem" data-dismiss="modal">
+                            <i class="zmdi zmdi-close"></i>
+                        </button>
+                        <button type="button" id="confirmLibraryAdding" class="btn btn-primary rounded-circle" style="width:3rem" data-toggle="modal" data-target="#addThese">
                             <i class="zmdi zmdi-check"></i>
                             </i>
                         </button>
