--- a/dashboard.html
+++ b/dashboard.html
@@ -40,6 +40,9 @@
                     <img class="profile-img-1" id="img" src="images/avatar.png" alt="avatar">
                 </div>
                     <strong>Neword Orquel</strong>
+                    <br>
+                    <br>
+                    <h5>Permissions</h5>
                 <div class="row mt-3 roles">
                     <div class="col-6 text-left">
                         <label for="root">Root</label>
@@ -51,6 +54,21 @@
                         <div><input type="radio" id="admin" name="role" value="admin"></div>
                         <div><input type="radio" checked="checked" id="user" name="role" value="user"></div>
                     </div>
+                    
+                </div>
+                <h5>Groupes</h5>
+                <div class="row mt-3 roles">
+                    <div class="col-6 text-left">
+                        <label for="ext">Ext-Nord</label>
+                        <label for="sud">Sud</label>
+                        <label for="centre">Centre</label>
+                    </div>
+                    <div class="col-6 roles-radio">
+                        <div><input type="checkbox" id="ext" name="groupe-ext" value="ext"></div>
+                        <div><input type="checkbox" id="sud" name="groupe-sud" value="sud"></div>
+                        <div><input type="checkbox" checked="checked" id="centre" name="groupe-centre" value="centre"></div>
+                    </div>
+                
                 </div>
             </div>
             <div class="col-10">
@@ -104,6 +122,7 @@
     <input type="text" name="right" id="right" value="user" style="display:none">
 </form>
     <div class="save-button-div">
+        <button class="btn btn-danger save-button" id="delete"><i class="zmdi zmdi-delete"></i></button>&nbsp;&nbsp;&nbsp;
         <button class="btn btn-success save-button" id="submit"><i class="zmdi zmdi-check"></i></button>
     </div>
             </div>
