--- a/showTheses.html
+++ b/showTheses.html
@@ -199,7 +199,7 @@
                 <div class=" modal-dialog-centered" style="box-sizing: content-box" role="document">
                 <div class=" detailCard card text-center" style="padding:2rem;">
                     <h3 class="detailTitle">2018 UNIVERSITE DE MAROUA 1 FACULTE D'ECONOMIE</h2>
-                        <div class="text-right"><a href=""><i class="zmdi zmdi-delete zmdi-hc-2x" style="color:red;"></i></a></div>
+                        <div class="text-right"><a href=""><i class="zmdi zmdi-delete zmdi-hc-2x" style="color:red;"></i></a>&nbsp;&nbsp;&nbsp;<i class="zmdi zmdi-close zmdi-hc-2x"   style="color:blue;"></i></div>
                     <div class="row justify-content-between">
                         <div>
                             <strong class="detailOption">Option: </strong> Gestion Financiere
