--- a/showTheses.html
+++ b/showTheses.html
@@ -92,8 +92,10 @@
                                         <span class='error' id="subjectError"></span>
                                         <input type="text" name="subject" id="subject" placeholder="Sujet/Thème" />
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" name="abstract" id="abstract" placeholder="Sommaire" />
+                                    <div class="img-upload-div">
+                                        <input class="img-input" type="text" id="abstract" placeholder="Sommaire">
+                                        <button class="img-upload" type="button" id="addButton">+</button>
+                                        <input type="file" name="resume" id="abstract_file" style="display:none">
                                     </div>
                                     <div class="form-group">
                                         <span class='error' id="regionError"></span>
