--- a/showTheses.html
+++ b/showTheses.html
@@ -147,8 +147,14 @@
                         </form>
                     </div>
                 </div>
+            <!--pagination-->
+            <div th:if="${theses.totalPages > 0}" class="pagination row justify-content-end" th:each="pageNumber : ${pageNumbers}">
+                <a th:href="@{/these(size=${theses.size}, page=${pageNumber})}" th:text=${pageNumber} th:class="${pageNumber==bookPage.number + 1} ? active"></a>
+            </div>
+            <!--pagination-->
             </div>
         <!-- showing theses-->
+
         <button type="button" class="addButton btn btn-primary rounded-circle" data-toggle="modal" data-target="#addThese">
             <i class="zmdi zmdi-plus"></i>
             </i>
