--- a/showTheses.html
+++ b/showTheses.html
@@ -106,6 +106,10 @@
                             <span class='error' id="subjectError"></span>
                             <input type="text" name="subject" id="subject" placeholder="Sujet/Thème" />
                         </div>
+                        <div class="form-group">
+                            <span class='error' id="dateError"></span>
+                            <input type="text" name="dateThese" id="dateThese" placeholder="Date" />
+                        </div>
                         <div class="img-upload-div">
                             <input class="img-input" type="text" id="abstract" placeholder="Sommaire">
                             <button class="img-upload" type="button" id="addButton">+</button>
@@ -130,10 +134,6 @@
                         <div class="form-group">
                             <span class='error' id="assistantError"></span>
                             <input type="text" name="assistant" id="assistant" placeholder="Nom de l'assistant" />
-                        </div>
-                        <div class="form-group">
-                            <span class='error' id="dateError"></span>
-                            <input type="date" name="dateThese" id="dateThese" placeholder="La date" />
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" id="submit" style="width:100%;" name="saveThese" id="saveThese" class="form-submit"
