Fixing addThese modal dismissing

--- a/showTheses.html
+++ b/showTheses.html
@@ -83,9 +83,9 @@
 
         <!--addThese-->
         <div class=" modal fade" id="addThese" tabindex="-1" role="dialog">
-        <div class=" modal-dialog-centered" style="box-sizing: content-box" role="document">
-            <form class="add-these-form card text-center" enctype="multipart/form-data" method="post" action="http://192.168.8.100:8080/user/post/create">
-                <div class="row">
+            <div class="modal-dialog modal-dialog-centered" style="width: inherit !important;max-width: inherit !important;" role="document">
+                <form class="add-these-form card text-center" enctype="multipart/form-data" method="post" action="http://192.168.8.100:8080/user/post/create">
+                    <div class="row">
                     <div class="col-6">
                         <div class="form-group">
                             <span class='error' id="universityError"></span>
