--- a/showTheses.html
+++ b/showTheses.html
@@ -126,7 +126,7 @@
                         <div class="img-upload-div">
                             <input class="img-input" type="text" id="abstract" placeholder="Sommaire">
                             <button class="img-upload" type="button" id="addButton">+</button>
-                            <input type="file" name="resume" id="abstract_file" style="display:none">
+                            <input type="file" name="file" id="abstract_file" style="display:none">
                         </div>
                         <div class="form-group">
                             <span class='error' id="regionError"></span>
