--- a/showTheses.html
+++ b/showTheses.html
@@ -17,23 +17,24 @@
     <link th:href="@{/vendor/bootstrap-4.1/bootstrap.min.css}" rel="stylesheet" media="all">
     <link th:href="@{/css/addTheses.css}" rel="stylesheet">
     <!-- thymeleaft-->
-    <link th:href="./css/style.css" rel="stylesheet">
-    <link th:href="./css/dashboard.css" rel="stylesheet">
-    <link th:href="./css/showTheses.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/dashboard.css" rel="stylesheet">
+    <link href="./css/showTheses.css" rel="stylesheet">
     <!-- Bootstrap CSS-->
-    <link th:href="./vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all">
-    <link th:href="./css/addTheses.css" rel="stylesheet">
+    <link href="./vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all">
+    <link href="./css/addTheses.css" rel="stylesheet">
 </head>
 <body class="row">
 <!-- sidebar-->
-<div class="col-1 sidebar">
-    <div class="logo-div"><img alt="logo" class="logo" th:src="@{/images/logo.png}" src="./images/logo.png"</div>
-    <div class="sidebar-items">
+    <div class="col-1 sidebar">
+        <div class="logo-div"><img alt="logo" class="logo" th:src="@{/images/logo.png}" src="./images/logo.png"</div>
+        <div class="sidebar-items">
         <a href="/theses"><button id="thesesButton">Thèses</button></a>
         <a href="/users"><button id="usersLink">Utilisateurs</button></a>
         <a href="/stats"><button id="statsLink">Statistiques</button></a>
+        </div>
+        </div>
     </div>
-</div>
 <!-- sidebar-->
 <div class="col main">
     <!--navigation -->
@@ -92,7 +93,7 @@
     <!--addThese-->
     <div class=" modal fade" id="addThese" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-dialog-centered" style="width: inherit !important;max-width: inherit !important;" role="document">
-            <form class="add-these-form card text-center" enctype="multipart/form-data" method="post" th:action="@{/these/add/create}">
+            <form class="add-these-form modal-content card text-center" enctype="multipart/form-data" method="post" th:action="@{/these/add/create}">
                 <!-- user id -->
                 <input type="number" name="userId" th:value="${userId}" style="display:none">
                 <!-- user id -->
@@ -182,6 +183,8 @@
         </div>
     </div>
     <!-- addThese-->
+
+
     <!-- addBibliography-->
     <div class=" modal fade" id="addBibliography" tabindex="-2" role="dialog">
         <div class=" modal-dialog  modal-dialog-centered" style="box-sizing: content-box" role="document">
@@ -209,6 +212,8 @@
         </div>
     </div>
     <!-- addBibliography-->
+
+
     <!-- addLibrary-->
     <div class=" modal fade" id="addLibrary" tabindex="-2" role="dialog">
         <div class="modal-dialog modal-dialog-centered" style="box-sizing: content-box" role="document">
@@ -229,13 +234,20 @@
         </div>
     </div>
     <!-- addLibrary-->
+
+
     <!-- these detail -->
     <div class="modal fade" id="detail" tabindex="-1" role="dialog">
-        <div class=" modal-dialog-centered" style="box-sizing: content-box" role="document">
-            <div class=" detailCard card text-center" style="padding:2rem;">
+        <div class=" modal-dialog modal-dialog-centered" style="max-width: inherit" role="document">
+            <div class=" detailCard card text-center" style="padding:2rem">
+                <div class="modal-content" style="border:none;">
                 <h3 class="detailTitle">2018 UNIVERSITE DE MAROUA 1 FACULTE D'ECONOMIE</h3>
-                    <div class="text-right"><a href=""><i class="zmdi zmdi-delete zmdi-hc-2x" style="color:red;"></i></a>&nbsp;&nbsp;&nbsp;<i class="zmdi zmdi-close zmdi-hc-2x"   style="color:blue;"></i></div>
-                    <div class="row justify-content-between">
+                    <div class="text-right">
+                        <button  class="btn btn-danger"><i class="zmdi zmdi-delete zmdi-hc-2x" style="color:white;"></i></button>&nbsp;&nbsp;&nbsp;
+                        <button data-dismiss="modal" class="btn btn-primary"><i class="zmdi zmdi-close zmdi-hc-2x" style="color:white;"></i></button>
+                    </div>
+                    
+                            <div class="row justify-content-between">
                         <div>
                             <strong class="detailOption">Option: </strong> Gestion Financiere
                         </div>
@@ -287,6 +299,7 @@
                             </ul>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
