--- a/showTheses.html
+++ b/showTheses.html
@@ -40,10 +40,10 @@
     <!--navigation -->
     <nav class="nav" style="width:100%">
         <div>
-            <img class="profile-img" th:src="${avatar}" alt="avatar">
+            <img class="profile-img" th:src="${session.avatar}" alt="avatar">
         </div>
         <select class="log-out">
-            <option th:text="${name}"></option>
+            <option th:text="${session.name}"></option>
             <option>Deconnexion</option>
         </select>
     </nav>
